# interpretador

./: .gitignore  README.md  pyproject.toml
docs/: guia-de-uso.md
examples/: fib.mp
minipy/: __init__.py  __main__.py  ast_nodes.py  environment.py  errors.py  interpreter.py  lexer.py  parser.py  tokens.py
tests/: test_advanced.py  test_interpreter.py  test_lexer.py
